@@ -19,6 +19,8 @@ import com.powsybl.contingency.ContingencyContext;
 import com.powsybl.iidm.network.PhaseTapChanger;
 import com.powsybl.iidm.network.ThreeWindingsTransformer;
 import com.powsybl.security.action.*;
+import com.powsybl.security.condition.AllViolationCondition;
+import com.powsybl.security.condition.AnyViolationCondition;
 import com.powsybl.security.condition.TrueCondition;
 import com.powsybl.security.strategy.OperatorStrategy;
 import com.powsybl.security.strategy.OperatorStrategyList;
@@ -30,7 +32,9 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
+import static com.powsybl.iidm.network.HvdcLine.ConvertersMode.SIDE_1_RECTIFIER_SIDE_2_INVERTER;
 import static org.junit.jupiter.api.Assertions.*;
+import static com.powsybl.security.LimitViolationType.*;
 
 /**
  * @author Etienne Lesot <etienne.lesot@rte-france.com>
@@ -65,6 +69,32 @@ class JsonActionAndOperatorStrategyTest extends AbstractConverterTest {
                 PhaseTapChanger.RegulationMode.ACTIVE_POWER_CONTROL, 15.0));
         actions.add(RatioTapChangerRegulationAction.activateRegulationAndChangeTargetV("id20", "transformerId5", 90.0));
         actions.add(RatioTapChangerRegulationAction.deactivateRegulation("id21", "transformerId5", ThreeWindingsTransformer.Side.THREE));
+        actions.add(new HvdcActionBuilder()
+                .withId("id22")
+                .withHvdcId("hvdc1")
+                .withAcEmulationEnabled(false)
+                .build());
+        actions.add(new HvdcActionBuilder()
+                .withId("id23")
+                .withHvdcId("hvdc2")
+                .withAcEmulationEnabled(true)
+                .build());
+        actions.add(new HvdcActionBuilder()
+                .withId("id24")
+                .withHvdcId("hvdc2")
+                .withAcEmulationEnabled(true)
+                .withDroop(121.0)
+                .withP0(42.0)
+                .withConverterMode(SIDE_1_RECTIFIER_SIDE_2_INVERTER)
+                .withRelativeValue(false)
+                .build());
+        actions.add(new HvdcActionBuilder()
+                .withId("id25")
+                .withHvdcId("hvdc1")
+                .withAcEmulationEnabled(false)
+                .withActivePowerSetpoint(12.0)
+                .withRelativeValue(true)
+                .build());
         ActionList actionList = new ActionList(actions);
         roundTripTest(actionList, ActionList::writeJsonFile, ActionList::readJsonFile, "/ActionFileTest.json");
     }
@@ -90,8 +120,23 @@ class JsonActionAndOperatorStrategyTest extends AbstractConverterTest {
     @Test
     void operatorStrategyRoundTrip() throws IOException {
         List<OperatorStrategy> operatorStrategies = new ArrayList<>();
-        operatorStrategies.add(new OperatorStrategy("id1", ContingencyContext.specificContingency("contingencyId1"), new TrueCondition(), Arrays.asList("actionId1", "actionId2", "actionId3")));
-        operatorStrategies.add(new OperatorStrategy("id1", ContingencyContext.specificContingency("contingencyId1"), new TrueCondition(), Arrays.asList("actionId1", "actionId2", "actionId3")));
+        operatorStrategies.add(new OperatorStrategy("id1", ContingencyContext.specificContingency("contingencyId1"),
+                new TrueCondition(), Arrays.asList("actionId1", "actionId2", "actionId3")));
+        operatorStrategies.add(new OperatorStrategy("id2", ContingencyContext.specificContingency("contingencyId2"),
+                new AnyViolationCondition(), List.of("actionId4")));
+        operatorStrategies.add(new OperatorStrategy("id3", ContingencyContext.specificContingency("contingencyId1"),
+                new AnyViolationCondition(Collections.singleton(CURRENT)),
+                Arrays.asList("actionId1", "actionId3")));
+        operatorStrategies.add(new OperatorStrategy("id4", ContingencyContext.specificContingency("contingencyId3"),
+                new AnyViolationCondition(Collections.singleton(LOW_VOLTAGE)),
+                Arrays.asList("actionId1", "actionId2", "actionId4")));
+        operatorStrategies.add(new OperatorStrategy("id5", ContingencyContext.specificContingency("contingencyId4"),
+                new AllViolationCondition(Arrays.asList("violation1", "violation2"),
+                        Collections.singleton(HIGH_VOLTAGE)),
+                Arrays.asList("actionId1", "actionId5")));
+        operatorStrategies.add(new OperatorStrategy("id6", ContingencyContext.specificContingency("contingencyId5"),
+                new AllViolationCondition(Arrays.asList("violation1", "violation2")),
+                List.of("actionId3")));
         OperatorStrategyList operatorStrategyList = new OperatorStrategyList(operatorStrategies);
         roundTripTest(operatorStrategyList, OperatorStrategyList::write, OperatorStrategyList::read, "/OperatorStrategyFileTest.json");
     }
